# final_project

./: .gitignore  main.py  pyproject.toml  tele.py
app/: config.py  main.py
app/agent/: vehicle_agent.py  vehicle_prompt.py  vehicle_symptom.py
app/agent/prompts/: issue_prompt.py  summary_prompt.py  vehicle_prompt.py
app/agent/services/: workshop_giver.py
app/agent/tools/: __init__.py  web_search.py  workshop_giver.py
app/auth/: auth.py
app/data/: __init__.py  obd_codes_refined.json
app/db/: ai_memory.py  db.py  users.py
app/middleware/: preflight.py
app/models/: maintenance.py  vehicle_chat.py  workshop.py
app/obd/: decoder.py  ws_listener.py
app/routers/: chathistory.py  maintenance_route.py  vehicle_chat.py  vehicle_workshops.py
app/services/: maintenance_service.py
app/telemetry/: cooldown.py  processor.py  thresholds.py
