[project]
name = "final-year"
version = "0.1.0"
description = "Vehicle Repair AI Agent"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "uv",
    "fastapi>=0.123.5",
    "uvicorn[standard]>=0.38.0",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "langchain==1.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "supabase>=2.27.0",
    "tavily-python>=0.7.17",
]
